--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>A Tale of Iron</title>
 </head>
 <body>
-    <canvas id="game" width="700" height="300"></canvas>
+    <canvas id="game-canvas" width="700" height="300"></canvas>
 
-    <script src=""></script>
+    <script src="./js/game.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
