--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <canvas id="game-canvas" width="700" height="300"></canvas>
 
+    <script src="./js/enemy.js"></script>
+    <script src="./js/hero.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/main.js"></script>
 </body>
