Add background. Minor fixes in the position of the characters

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <canvas id="game-canvas" width="700" height="300"></canvas>
 
+    <script src="./js/background.js"></script>
     <script src="./js/enemy.js"></script>
     <script src="./js/hero.js"></script>
     <script src="./js/game.js"></script>
