--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/styles.css">
     <title>A Tale of Iron</title>
 </head>
 <body>
-    <canvas id="game-canvas" width="700" height="300"></canvas>
+    <div class="container">
+        <canvas id="game-canvas" width="700" height="300"></canvas>
+        <section class="instructions"></section>
+    </div>
+   
 
     <script src="./js/background.js"></script>
     <script src="./js/enemy.js"></script>
