--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <body>
     <div class="container">
         <canvas id="game-canvas" width="700" height="300"></canvas>
-        <section class="instructions"></section>
+        <section class="instructions">
+            <div class="intro">
+                <p> Your name is Iron Acker, that's all you remember. Well... and also that 
+                    you're in the middle of the forest surrounded by enemies. 
+                    Make your way to the end of the forest and defeat them all! 
+                </p>
+            </div>
+            <div class="controls">
+                <p> Press 'D' to advance. In combat, use the arrow keys to choose your skill.
+                </p>
+            </div>
+            
+
+        </section>
     </div>
    
 
