Add header and mute button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>A Tale of Iron</title>
 </head>
 <body>
+    <header id="header">
+        <h1>A Tale Of Iron!</h1>
+    </header>
+    <div class="button-container">
+        <button class="button">🔊</button>
+    </div>
     <div class="container">
         <canvas id="game-canvas" width="700" height="300"></canvas>
         <section class="instructions">
