Add music and mute function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>A Tale Of Iron!</h1>
     </header>
     <div class="button-container">
-        <button class="button">🔊</button>
+        <button id="mute-button" class="button">🔊</button>
     </div>
     <div class="container">
         <canvas id="game-canvas" width="700" height="300"></canvas>
