--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     <header id="header">
-        <h1>A Tale Of Iron!</h1>
+        <!-- <h1>A Tale Of Iron!</h1> -->
+        <img src="./img/logo.png" alt="A Tale of Iron!">
     </header>
     <div class="button-container">
         <button id="mute-button" class="button">🔊</button>
+        <a href="#" class="speaker">
+            <span></span>
+          </a>
     </div>
     <div class="container">
         <canvas id="game-canvas" width="700" height="300"></canvas>
