Change instructions. Change mute flag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
             </div>
             <div class="controls">
-                <p> Press 'D' to advance. In combat, use the arrow keys to choose your skill.
+                <p> Press 'D' to advance. While in combat, use the arrow keys to choose your skill and remember your rock-paper-scissors lessons .
                 </p>
             </div>
             
